Fix potential overflow

--- a/src/components/LeaguePanels.scss
+++ b/src/components/LeaguePanels.scss
@@ -81,6 +81,11 @@
     }
 }
 
+.potential {
+    display: flex;
+    align-items: flex-end;
+}
+
 .centered-text {
     color: #fff;
     text-shadow: -1px 0 #00000040, 0 1px #00000040, 1px 0 #00000040, 0 -1px #00000040;
